# iudex-python

./: README.md  pyproject.toml  requirements.txt
examples/: example_pokemon.py  example_weather.py  example_yelp.py
iudex/: __init__.py  asgi.py  attributes.py  chat.py  client.py  config.py  fastapi.py  functions.py  instrumentation.py  resource.py  supabase.py  trace.py  utils.py
iudex/django/: __init__.py  package.py  utils.py
iudex/instrumentation/: README.md  __init__.py  attributes.py  fastapi-instrumentation.py  fastapi.py  fastapi_instrumentation.py  instrumentation.py  lambda.py  lambda_instrumentation.py
iudex/monkeypatches/: clean_attribute.py  encode_value.py  get_attributes.py  logging.py  print.py
iudex/openai/: __init__.py  utils.py
iudex/openai/shared/: __init__.py  chat_wrappers.py  completion_wrappers.py  embeddings_wrappers.py  image_gen_wrappers.py
iudex/openai/v0/: __init__.py
iudex/openai/v1/: __init__.py  assistant_wrappers.py  event_handler_wrapper.py
iudex/supabase/: __init__.py  package.py  utils.py
iudex/types/: function.py
test/: other_file.py  test_docs_guide_example.py  test_fastapi_instrumentation.py  test_function_json.py  test_guardrails_instrumentation.py  test_modal_instrumentation.py  test_readme_example.py  test_streamlit_instrumentation.py  test_supabase.py  test_supabase_instrumentation.py
test/test_django_instrumentation/: README.md  manage.py
test/test_django_instrumentation/jobs_board/: admin.py  apps.py  models.py  urls.py  views.py
test/test_django_instrumentation/jobs_board/migrations/: 0001_initial.py
test/test_django_instrumentation/jobs_board/templates/jobs_board/: profile.html  profile_create.html  profile_evaluate.html
test/test_django_instrumentation/polls/: models.py  urls.py  views.py
test/test_django_instrumentation/polls/migrations/: 0001_initial.py  0002_profile.py
test/test_django_instrumentation/polls/templates/polls/: index.html
test/test_django_instrumentation/test_django_instrumentation/: asgi.py  settings.py  urls.py  wsgi.py
