[tool.poetry]
name = "iudex"
version = "0.8.0"
description = ""
authors = ["Drake Wong <drake@iudex.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-distro = "^0.46b0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-psycopg2 = "^0.46b0"
wrapt = "^1.16.0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-semantic-conventions-ai = "^0.3.1"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
openai = "^1.33.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
supabase = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"
